fix: fix button width on small screens

--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -74,6 +74,11 @@
   font-weight: bold;
   margin: 60px auto 80px;
 
+  @media screen and (max-width: 540px) {
+    width: 100%;
+    max-width: 360px;
+  }
+
   @media screen and (max-width: 320px) {
     width: 240px;
   }
